# starring-web

./: .gitignore  README.md  package-lock.json  package.json  run-all.ps1  run-all.sh  run-backend.ps1
.github/: copilot-instructions.md
backend/: main.py  pyproject.toml  test_main.py
backend/api/: routes_movies.py  routes_watchlist.py
backend/core/: services.py
backend/db/: __init__.py  base.py
backend/entities/: movie.py  watchlist_item.py
src/: App.tsx
src/components/: MovieDetail.tsx  MovieList.test.tsx  MovieList.tsx  MovieListItem.tsx  MovieListPanel.tsx  Watchlist.tsx
src/entities/: Movie.ts
src/services/: movieService.ts  watchlistService.ts
src/store/: movieStore.ts
src/styles/: theme.ts
